Add game, deploy script, itch title

--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "http-server": "^14.1.1"
+  },
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url='.'",
+    "serve": "cd dist && http-server -so -c-1",
+    "deploy": "npm run build && npm run deploy:itch",
+    "deploy:itch": "butler push dist rmkubik/sub-game:html"
   },
   "author": "",
   "license": "ISC"
