Break index up into files and add react-dnd

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "parcel": "^2.0.0",
     "react": "^16.13.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
